fixed missing margin top

--- a/src/styles/_reboot.scss
+++ b/src/styles/_reboot.scss
@@ -159,7 +159,7 @@ dd {
 }
 
 blockquote {
-  margin: 0 0 $margin-top-base;
+  margin: $margin-top-base 0 0;
 }
 
 dfn {
